# robot_client_agent

./: .env  .gitignore  pyproject.toml  start_vllm.sh
.github/: copilot-instructions.md
config/: config.py
src/: main.py
src/api/: dependencies.py  v1_chat.py
src/core/: config.py
src/models/: schemas.py
src/services/: llm_service.py  memory_service.py  semantic_router.py
tests/: test_client.py  test_semantic_router.py
