[project]
name = "7-agent"
version = "0.1.0"
requires-python = "==3.10.12"
readme = "README.md"
description = "高尔夫机器人Agent后端服务"
dependencies = [
    "fastapi>=0.135.3",
    "logging>=0.4.9.6",
    "numpy>=2.2.6",
    "openai>=2.31.0",
    "pydantic>=2.12.5",
    "pytest>=9.0.3",
    "redis>=7.4.0",
    "requests>=2.33.1",
    "sentence-transformers>=5.3.0",
    "socksio>=1.0.0",
    "typing>=3.10.0.0",
    "uvicorn>=0.44.0",
]
